plugins {
    id 'application'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    mainClass = 'se.dykstrom.spring.BsafApplication'

    applicationDefaultJvmArgs = [
            '--add-opens=java.base/java.lang=ALL-UNNAMED',
            '--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED'
    ]
}

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'javax.inject', name: 'javax.inject', version: '1'
    implementation group: 'org.springframework', name: 'spring-beans', version: '6.0.11'
    implementation group: 'org.springframework', name: 'spring-context', version: '6.0.11'
    implementation group: 'org.jdesktop.bsaf', name: 'bsaf', version: '1.9.2'
}
